Added Google OAuth2 controller